multiple output zone

--- a/BlazorAppRenderFragment/Pages/Index.razor
+++ b/BlazorAppRenderFragment/Pages/Index.razor
@@ -12,9 +12,13 @@
 <Zone>
     <SimpleChild Id="2"></SimpleChild>
 </Zone>
- 
 
-<Output></Output>
+
+<Output ZoneId="1"></Output>
+
+<hr />
+
+<Output ZoneId="2"></Output>
 
 @code{
     public void Refresh()
