--- a/BlazorAppRenderFragment/Pages/Output.razor
+++ b/BlazorAppRenderFragment/Pages/Output.razor
@@ -1,8 +1,8 @@
 ﻿@inject ZoneService ZoneService
 
-@foreach(var frag in ZoneService.GetFrags())
+@foreach(var frag in ZoneService.GetFrags(ZoneId))
 {
-    <div>
+    <div @key="frag">
         @frag
     </div>
 }
@@ -16,5 +16,7 @@
             await InvokeAsync(() => StateHasChanged());
         };
     }
+
+    [Parameter] public int ZoneId { get; set; }
 
 }
